--- a/rabbits/src/main/resources/reference.conf
+++ b/rabbits/src/main/resources/reference.conf
@@ -31,11 +31,11 @@ rabbits {
     signalAttenuationFactor = 1
     signalSpeedRatio = 2
 
-    workersRoot = 2
+    workersRoot = 3
     isSupervisor = true
     shardingMod = 144
 
-    guiType = grid
+    guiType = none
     guiCellSize = 4
 
     spawnChance = 0.1
