Fixing last last bugs and adding last test cases

--- a/mock/src/main/resources/reference.conf
+++ b/mock/src/main/resources/reference.conf
@@ -34,9 +34,26 @@ mock {
     isSupervisor = true
     shardingMod = 144
 
-    guiType = grid
+    guiType = none
     guiCellSize = 4
 
     mockInitialSignal = 1
+
+    isDebugMode = false
+    shouldBalance = true
+    statisticsDistributionInterval = 50
+    balancingIntervalMultiplier = 1
+    shouldGoDepth = true
+    shouldUseMetricOnAllFoundCells = true
+    shouldUpdateMiddlePoint = false
+    shouldCheckCorrectness = false
+    shouldLogChanges = true
+    minimumNumberOfAdjacentCells = 9
+    minimumDiffBetweenWorkers = 0.85
+    amountCellsDivider = 8
+    balancingMessageDelay = 4
+    slowMultiplier = 0.25
+    simulationCase = "agentType"
+    metricFunction = "euclidClose"
   }
 }
