--- a/rabbits/src/main/resources/reference.conf
+++ b/rabbits/src/main/resources/reference.conf
@@ -25,7 +25,7 @@ rabbits {
     worldType = grid
     worldWidth = 100
     worldHeight = 100
-    iterationsNumber = 10000
+    iterationsNumber = 2500
 
     signalSuppressionFactor = 0.5
     signalAttenuationFactor = 1
@@ -51,5 +51,22 @@ rabbits {
 
     lettuceEnergeticCapacity = 0.6
     lettuceReproductionFrequency = 2
+    
+    isDebugMode = false
+    shouldBalance = true
+    statisticsDistributionInterval = 50
+    balancingIntervalMultiplier = 1
+    shouldGoDepth = true
+    shouldUseMetricOnAllFoundCells = true
+    shouldUpdateMiddlePoint = false
+    shouldCheckCorrectness = false
+    shouldLogChanges = true
+    minimumNumberOfAdjacentCells = 9
+    minimumDiffBetweenWorkers = 0.85
+    amountCellsDivider = 8
+    balancingMessageDelay = 4
+    slowMultiplier = 0.25
+    simulationCase = "agentType"
+    metricFunction = "euclidClose"
   }
 }
